--- a/arch/arm64/configs/polaris-miku_defconfig
+++ b/arch/arm64/configs/polaris-miku_defconfig
@@ -1,4 +1,6 @@
-CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION="-miku"
+# CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_DEFAULT_HOSTNAME="archlinux"
 CONFIG_SYSVIPC=y
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
